<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Fragments.GuestFragment.CartFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/backToImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/titleCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_cart"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/backToImage"
        app:layout_constraintTop_toTopOf="@id/backToImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/titleCart"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:layout_marginBottom="16dp"
                tools:listitem="@layout/cart_item"
                tools:itemCount="1"/>

            <TextView
                android:id="@+id/titleOrderSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_summary"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/totalTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textTotalPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textTotalPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/titleInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/information"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalTitle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/cash_back"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/payment_method"
                    android:textColor="#696969"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/titleCash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/cash"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageCash"
                    app:layout_constraintStart_toEndOf="@+id/imageCash"
                    app:layout_constraintTop_toTopOf="@+id/imageCash" />

                <ImageView
                    android:id="@+id/imageCash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/textPaymentMethod"
                    app:layout_constraintTop_toBottomOf="@+id/textPaymentMethod"
                    app:srcCompat="@drawable/payment_img" />

                <ImageView
                    android:id="@+id/openPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/titleCash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/titleCash"
                    app:srcCompat="@drawable/arrow_forward" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="#696969"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageCash" />

                <TextView
                    android:id="@+id/textCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/cancel_the_order"
                    android:textColor="#696969"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textPaymentMethod"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <ImageView
                    android:id="@+id/payImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/textCancel"
                    app:layout_constraintTop_toBottomOf="@+id/textCancel"
                    app:srcCompat="@drawable/cancel_img" />

                <TextView
                    android:id="@+id/payTitleRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/payImg"
                    app:layout_constraintStart_toEndOf="@+id/payImg"
                    app:layout_constraintTop_toTopOf="@+id/payImg" />

                <ImageView
                    android:id="@+id/cancelImageBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/payTitleRepeat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/payTitleRepeat"
                    app:srcCompat="@drawable/arrow_forward" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="#696969"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/payImg" />

                <TextView
                    android:id="@+id/textChangeOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/change_order_info"
                    android:textColor="#696969"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textCancel"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

                <ImageView
                    android:id="@+id/changeOrderImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/textChangeOrder"
                    app:layout_constraintTop_toBottomOf="@+id/textChangeOrder"
                    app:srcCompat="@drawable/icon_change_order" />


                <TextView
                    android:id="@+id/titleChangeOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/change"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/changeOrderImg"
                    app:layout_constraintStart_toEndOf="@+id/changeOrderImg"
                    app:layout_constraintTop_toTopOf="@+id/changeOrderImg" />

                <ImageView
                    android:id="@+id/changeOrderBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/titleChangeOrder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/titleChangeOrder"
                    app:srcCompat="@drawable/arrow_forward" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/placeOrderButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_now"
                android:textColor="@color/black"
                android:background="@drawable/go_back_btn"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
